# axum-diesel-todoapp

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  diesel.toml  docker-compose.yml  justfile  migration.dockerfile  migration_entrypoint.sh
migrations/2024-02-18-140408_create_users/: up.sql
migrations/2024-02-18-162820_create_tasks/: up.sql
migrations/2024-02-18-172433_create_tags/: down.sql  up.sql
migrations/2024-02-18-173611_create_activities/: down.sql  up.sql
migrations/2024-02-19-031058_create_comments/: up.sql
postman_collections/: Auth.postman_collection.json  Task.postman_collection.json
src/: config.rs  main.rs  schema.rs
src/api/v1/: mod.rs
src/api/v1/controllers/: mod.rs  signin.rs  signup.rs
src/api/v1/controllers/task/: create_task.rs  delete_task.rs  mod.rs  (+1 more)
src/api/v1/db/: base.rs  database.rs  in_memory.rs  postgres.rs
src/api/v1/middlewares/: auth.rs
src/api/v1/models/: mod.rs  models.rs  tasks.rs  users.rs
src/api/v1/routes/: all_routes.rs  mod.rs  task.rs
src/api/v1/tests/: tests.rs
src/api/v1/types/: db.rs  env.rs  session.rs
src/api/v1/utils/: env.rs  errors.rs  hashing.rs  mod.rs  response.rs
src/config/: config.rs  db_config.rs  env_config.rs  log_config.rs  mod.rs  routes_config.rs
src/v1/api/controllers/: signin.rs  signup.rs
src/v1/api/db/: base.rs  database.rs  in_memory.rs  mod.rs  postgres.rs
src/v1/api/models/: users.rs
src/v1/api/routes/: signup.rs
src/v1/api/types/: db.rs  env.rs  mod.rs
src/v1/api/utils/: env.rs  errors.rs  hashing.rs  mod.rs
(+7 files in other folders)
