[package]
name = "rust-demo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
env_logger = "0.11.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4"] }
# sqlx = { version = "0.7", features = [ "runtime-tokio", "migrate", "postgres" ] }
dotenv = "0.15.0"
strum = "0.26.1"
strum_macros = "0.26.1"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres", "bb8", "deadpool"] }
chrono = { version = "0.4.34", features = ["serde"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
lazy_static = "1.4.0"
bb8 = "0.8.3"
argon2 = "0.5.3"

